front-k8s.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: voteapp
  annotations:
  labels:
    run: front
  name: front-server

spec:
  replicas: 1
  selector:
    matchLabels:
      run: front
  template:
    metadata:
      labels:
        run: front
    
    spec:
      containers:
      - image: dansolo7/front:$BUILD_NUMBER
        imagePullPolicy: Always
        name: front
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  namespace: voteapp
  labels:
    run: front
  name: front-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: front
  sessionAffinity: None
  type: NodePort
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    namespace: voteapp
    name: front-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
  spec:
    rules:
    - host: www.front.com
      http:
        paths:
          - path: /
            backend:
              serviceName: front-service
              servicePort: 80
